<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.mvp.ui.PublishActivity">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/enter_data_txt"
    android:textSize="20dp"
    android:textStyle="bold"
    android:layout_margin="16dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_category_txt"
        android:layout_marginTop="10dp"/>
    <EditText
        android:id="@+id/edit_category_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_tag_txt"
        android:layout_marginTop="10dp"/>
    <EditText
        android:id="@+id/edit_tag_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_header_txt"
        android:layout_marginTop="10dp"/>
    <EditText
        android:id="@+id/edit_header_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_description_txt"
        android:layout_marginTop="10dp"/>
    <EditText
        android:id="@+id/edit_description_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_link_txt"
        android:layout_marginTop="10dp"/>
    <EditText
        android:id="@+id/edit_link_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_file_picture_txt"
        android:layout_marginTop="10dp"/>
    <Button
        android:id="@+id/button_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_load_image_text"
        android:layout_margin="12dp"/>
    <Button
        android:id="@+id/button_send_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_send_post"
        android:textSize="20dp"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>