<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.mvp.ui.fragment.LinkFragment">

    <ScrollView
        android:id="@+id/scroll_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_left"
                android:layout_marginTop="10dp"
                android:text="@string/enter_category_txt" />

            <EditText
                android:id="@+id/edit_category_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_edit_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_left"
                android:layout_marginTop="10dp"
                android:text="@string/enter_tag_txt" />

            <EditText
                android:id="@+id/edit_tag_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_edit_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_left"
                android:layout_marginTop="10dp"
                android:text="@string/enter_link_txt" />

            <EditText
                android:id="@+id/edit_link_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_edit_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/enter_link_txt_name" />

            <EditText
                android:id="@+id/edit_link_link_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_edit_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:text="@string/star_txt" />

            <Button
                android:id="@+id/button_send_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="@dimen/margin_left"
                android:text="@string/button_send_post"
                android:textSize="20dp" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>