<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout4"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp">

    <TextView
        android:id="@+id/load_txt_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/header_post"
        app:layout_constraintStart_toStartOf="@+id/file_picture_post"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/file_picture_post"
        android:layout_width="@dimen/post_width_picture_size"
        android:layout_height="@dimen/post_height_picture_size"
        android:layout_marginStart="28dp"
        android:layout_marginTop="27dp"
        android:layout_marginBottom="27dp"
        app:layout_constraintBottom_toBottomOf="@+id/category_post_word"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/category_post_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="9dp"
        android:text="@string/category"
        android:textSize="@dimen/category_text_size"
        app:layout_constraintBottom_toTopOf="@+id/tag_post_word"
        app:layout_constraintEnd_toStartOf="@+id/category_post"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/category_post"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/category_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tag_post"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/category_post_word" />

    <TextView
        android:id="@+id/tag_post_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="94dp"
        android:text="@string/tag"
        android:textSize="@dimen/tag_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tag_post"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tag_post"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/tag_text_size"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tag_post_word"
        app:layout_constraintTop_toBottomOf="@+id/category_post_word" />

    <TextView
        android:id="@+id/header_post"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="7dp"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tag_post_word"
        app:layout_constraintTop_toBottomOf="@+id/tag_post_word" />

    <TextView
        android:id="@+id/description_post"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toTopOf="@+id/link_post_word"
        app:layout_constraintEnd_toEndOf="@+id/header_post"
        app:layout_constraintStart_toStartOf="@+id/header_post" />

    <TextView
        android:id="@+id/link_post_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        android:text="@string/link"
        android:textSize="@dimen/link_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/link_post"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/link_post"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/link_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/link_post_word" />

</android.support.constraint.ConstraintLayout>